# admission-webhook

./: Cargo.toml  Dockerfile  README.md
.cargo/: audit.toml  config.toml
charts/admission-webhook/: Chart.yaml  values.yaml
charts/admission-webhook/templates/: _helpers.tpl  certificate.yaml  issuer.yaml  mutating-webhook-configuration.yaml  validating-webhook-configuration.yaml
charts/admission-webhook/templates/crds/: app.demo_doges.yaml
charts/admission-webhook/templates/webhook/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
examples/: mutating-webhook-configuration.yaml  validating-webhook-configuration.yaml
examples/doge/: doge1.yaml
scripts/: install-deps  start.sh
src/: env.rs  error.rs  lib.rs
src/crd/v1alpha1/: doge.rs  mod.rs
src/domain/: error.rs  mod.rs
src/domain/model/: mod.rs
src/web/: error.rs  mod.rs  response.rs
src/web/controller/: mod.rs
src/web/controller/admission/: mod.rs  v1.rs
